Avances en el armado del home

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     <div id="main-content">
       <div class="container-fluid">
         <div class="row">
-          <div id="sidebar" class="col-md-2">
+          <div id="sidebar" class="col-md-3">
             <div class="filter-header">
               Filtros
             </div>
@@ -118,11 +118,139 @@
             <!-- end filtro habitaciones -->
           </div>
           <!-- end sidebar -->
-          <div class="col-md-10">
-            <div class="filter-header">
-              Resultado de la búsqueda: 1,200 propiedades
+          <div id="houses-content" class="col-md-9">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="filter-header">
+                  Resultado de la búsqueda: 1,200 propiedades
+                </div>
+              </div>
             </div>
+            <div class="row">
+              <div class="col-md-6">
+                <article class="house-item">
+                  <a href="#">
+                    <img src="img/demo/houses/casa-uno.jpg" alt="casa uno" class="img-responsive">
+                  </a>
+                  <div class="item-details">
+                    <a href="#">
+                      <h4>
+                        $2,500 Casa de dos pisos a 5 min del centro
+                      </h4>
+                      <div class="item-address text-muted">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        Calle Alcatraz, Col Javier Barrios  
+                      </div>
+                      <div class="item-metrics text-muted">
+                        <span class="item-loves">
+                          <i class="fa fa-heart" aria-hidden="true"></i>
+                          250
+                        </span>
+                        <span class="item-views">
+                          <i class="fa fa-eye" aria-hidden="true"></i>
+                          1,300
+                        </span>
+                      </div>
+                    </a>
+                  </div>
+                  <!-- item-details -->
+                </article>
+              </div>
+              <!-- end col article -->
+              <div class="col-md-6">
+                <article class="house-item">
+                  <a href="#">
+                    <img src="img/demo/houses/casa-uno.jpg" alt="casa uno" class="img-responsive">
+                  </a>
+                  <div class="item-details">
+                    <a href="#">
+                      <h4>
+                        $2,500 Casa de dos pisos a 5 min del centro
+                      </h4>
+                      <div class="item-address text-muted">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        Calle Alcatraz, Col Javier Barrios  
+                      </div>
+                      <div class="item-metrics text-muted">
+                        <span class="item-loves">
+                          <i class="fa fa-heart" aria-hidden="true"></i>
+                          250
+                        </span>
+                        <span class="item-views">
+                          <i class="fa fa-eye" aria-hidden="true"></i>
+                          1,300
+                        </span>
+                      </div>
+                    </a>
+                  </div>
+                  <!-- item-details -->
+                </article>
+              </div>
+              <!-- end col article -->
+              <div class="col-md-6">
+                <article class="house-item">
+                  <a href="#">
+                    <img src="img/demo/houses/casa-uno.jpg" alt="casa uno" class="img-responsive">
+                  </a>
+                  <div class="item-details">
+                    <a href="#">
+                      <h4>
+                        $2,500 Casa de dos pisos a 5 min del centro
+                      </h4>
+                      <div class="item-address text-muted">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        Calle Alcatraz, Col Javier Barrios  
+                      </div>
+                      <div class="item-metrics text-muted">
+                        <span class="item-loves">
+                          <i class="fa fa-heart" aria-hidden="true"></i>
+                          250
+                        </span>
+                        <span class="item-views">
+                          <i class="fa fa-eye" aria-hidden="true"></i>
+                          1,300
+                        </span>
+                      </div>
+                    </a>
+                  </div>
+                  <!-- item-details -->
+                </article>
+              </div>
+              <!-- end col article -->
+              <div class="col-md-6">
+                <article class="house-item">
+                  <a href="#">
+                    <img src="img/demo/houses/casa-uno.jpg" alt="casa uno" class="img-responsive">
+                  </a>
+                  <div class="item-details">
+                    <a href="#">
+                      <h4>
+                        $2,500 Casa de dos pisos a 5 min del centro
+                      </h4>
+                      <div class="item-address text-muted">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        Calle Alcatraz, Col Javier Barrios  
+                      </div>
+                      <div class="item-metrics text-muted">
+                        <span class="item-loves">
+                          <i class="fa fa-heart" aria-hidden="true"></i>
+                          250
+                        </span>
+                        <span class="item-views">
+                          <i class="fa fa-eye" aria-hidden="true"></i>
+                          1,300
+                        </span>
+                      </div>
+                    </a>
+                  </div>
+                  <!-- item-details -->
+                </article>
+              </div>
+              <!-- end col article -->
+            </div>
+            <!-- end row -->
           </div>
+          <!-- end houses-content -->
         </div>
       </div>
     </div>
