--- a/js/app/widgets/siteMenu/site-menu.html
+++ b/js/app/widgets/siteMenu/site-menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default chai-dark-color">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,8 +14,15 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse navbar-right" uib-collapse="menuCtl.isNavCollapsed">
-      <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse" uib-collapse="menuCtl.isNavCollapsed">
+      <p class="navbar-text navbar-left">Renta una casa en jilo</p>
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Buscar">
+        </div>
+      </form>
+      <!-- end navbar -->
+      <ul class="nav navbar-nav navbar-right">
         <li>
           <a href="/">INICIO</a>
         </li>
@@ -37,6 +44,10 @@
           </div>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse-->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse-->
+    
+
+  </div>
+  <!-- /.container-fluid -->
 </nav>
