Actualice la version de Font awesome. Mejoras menores en el armado de la página de detalles.

--- a/details.html
+++ b/details.html
@@ -49,6 +49,26 @@
                   <img src="img/demo/houses/casa-uno.jpg" alt="casa uno" class="img-responsive">
                 </div>
               </div>
+              <div  class="house-metrics">
+                <div class="row ">
+                  <div class="col-md-2 metric-data">
+                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <span>2,315</span>
+                  </div>
+                  <!-- end metric -->
+                  <div class="col-md-2 metric-data">
+                    <i class="fa fa-eye" aria-hidden="true"></i>
+                    <span>850</span>
+                  </div>
+                  <!-- end feture-item -->
+                  <div class="col-md-3 metric-data">
+                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                    <span>10/04/2017</span>
+                  </div>
+                  <!-- end feture-item -->
+                </div>
+              </div>
+              <!-- end house-features -->
               <div class="house-details">
                 <div class="house-section">
                     <h4>Descripción</h4>
@@ -82,11 +102,88 @@
                 $2,500 por mes
               </h3>
             </div>
-            <div class="house-section">
+            <div  class="house-features">
+              <div class="row ">
+                <div id="habitaciones" class="col-md-4 text-center feture-item">
+                  <i class="fa fa-bed" aria-hidden="true"></i>
+                  <span>2</span>
+                </div>
+                <!-- end feture-item -->
+                <div id="banos" class="col-md-4 text-center feture-item">
+                  <i class="fa fa-bath" aria-hidden="true"></i>
+                  <span>2</span>
+                </div>
+                <!-- end feture-item -->
+                <div id="estacionamiento" class="col-md-4 text-center feture-item">
+                  <i class="fa fa-car" aria-hidden="true"></i>
+                  <span>2</span>
+                </div>
+                <!-- end feture-item -->
+              </div>
+            </div>
+            <!-- end house-features -->
+            <div id="contact-details" class="house-section">
                 <h4>Contacto</h4>
-                <p>
-                  Departamento renovado recientemente, ubicado dentro de una casa de los años 1930s, totalmente amueblado, cocina equipada, horno de microondas.
-                </p>
+                <div class="form-horizontal contact-data">
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">Nombre:</label>
+                    <div class="col-sm-8">
+                      <p class="form-control-static">
+                        Luis Gomez Cruz
+                      </p>
+                    </div>
+                  </div>
+                  <!-- end contact-data -->
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">Teléfono:</label>
+                    <div class="col-sm-8">
+                      <p class="form-control-static">
+                        55-23-22-03-85
+                      </p>
+                    </div>
+                  </div>
+                  <!-- end contact-data -->
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">
+                      Email:
+                      </label>
+                    <div class="col-sm-8">
+                      <p class="form-control-static">
+                        luis@mail.com
+                      </p>
+                    </div>
+                  </div>
+                  <!-- end contact-data -->
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">  
+                      Facebook:
+                    </label>
+                    <div class="col-sm-8">
+                      <p class="form-control-static">
+                        www.facebook.com/luis
+                      </p>
+                    </div>
+                  </div>
+                  <!-- end contact-data -->
+                  <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-4 control-label">  
+                      Sitio web:
+                    </label>
+                    <div class="col-sm-8">
+                      <p class="form-control-static">
+                        www.casasluis.com
+                      </p>
+                    </div>
+                  </div>
+                  <!-- end contact-data -->
+                </div>
+            </div>
+            <!-- end contact-details -->
+            <div class="house-actions">
+              <a href="#" class="btn btn-primary coco-color">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                Llamar
+              </a>
             </div>
           </div>
           <!-- end side bar -->
