Complete el armado de la página de detalles

--- a/details.html
+++ b/details.html
@@ -42,7 +42,7 @@
             <div class="house-content">
               <div id="house-summary">
                 <h3>Casa a 5 min del centro de Jilotepec</h3>
-                <h5>LL Calle Alcatraz, Col Javier Barrios</h5>
+                <h4>LL Calle Alcatraz, Col Javier Barrios</h4>
               </div>
               <div class="house-images">
                 <div class="cropped-image house-image-content">
@@ -52,7 +52,9 @@
               <div  class="house-metrics">
                 <div class="row ">
                   <div class="col-md-2 metric-data">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <a href="#" class="home-link no-underline"> 
+                      <i class="fa fa-heart" aria-hidden="true"></i>
+                    </a>
                     <span>2,315</span>
                   </div>
                   <!-- end metric -->
@@ -79,17 +81,55 @@
                 </div>
                 <div class="house-section">
                     <h4>Servicios</h4>
-                    <p>
-                      Departamento renovado recientemente, ubicado dentro de una casa de los años 1930s, totalmente amueblado, cocina equipada, horno de microondas.
-                      Localizado en Av. Vallarta, la avenida principal de la ciudad, pero el departamento no es ruidoso. Cerca de la Universidad de Guadalajara, el Consulado Americano, la Alianza Francesa. A 15 minutos caminando del centro de la ciudad.
-                    </p>
+                    <div class="services-list">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-wifi" aria-hidden="true"></i>
+                            Internet
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            Linea telefónica
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-cutlery" aria-hidden="true"></i>
+                            Cocina
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-paw" aria-hidden="true"></i>
+                            Admite mascotas
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-child" aria-hidden="true"></i>
+                            Área de juegos infantiles
+                          </div>
+                        </div>
+                        <div class="col-md-4">
+                          <div class="service-item">
+                            <i class="fa fa-taxi" aria-hidden="true"></i>
+                            Seguridad privada
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                 </div>
                 <div class="house-section">
                     <h4>Ubicación</h4>
                     <p>
-                      Departamento renovado recientemente, ubicado dentro de una casa de los años 1930s, totalmente amueblado, cocina equipada, horno de microondas.
-                      Localizado en Av. Vallarta, la avenida principal de la ciudad, pero el departamento no es ruidoso. Cerca de la Universidad de Guadalajara, el Consulado Americano, la Alianza Francesa. A 15 minutos caminando del centro de la ciudad.
+                      LL Calle Alcatraz, Col Javier Barrios
                     </p>
+                    <div class="map-container">
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15000.530307909527!2d-99.5284136!3d19.960926!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1497926774793" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 </div>
               </div>
             </div>
@@ -149,7 +189,9 @@
                       </label>
                     <div class="col-sm-8">
                       <p class="form-control-static">
-                        luis@mail.com
+                        <a href="#" class="home-link"> 
+                          luis@mail.com
+                        </a>
                       </p>
                     </div>
                   </div>
@@ -160,7 +202,9 @@
                     </label>
                     <div class="col-sm-8">
                       <p class="form-control-static">
-                        www.facebook.com/luis
+                        <a href="#" class="home-link"> 
+                          www.facebook.com/luis
+                        </a>
                       </p>
                     </div>
                   </div>
@@ -171,7 +215,9 @@
                     </label>
                     <div class="col-sm-8">
                       <p class="form-control-static">
-                        www.casasluis.com
+                        <a href="#" class="home-link"> 
+                          www.casasluis.com
+                        </a>
                       </p>
                     </div>
                   </div>
