Avances menores en el armado del admin

--- a/admin.html
+++ b/admin.html
@@ -36,10 +36,39 @@
       <site-Menu></site-Menu>
     </header>
     <div id="main-content">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div id="house-content" class="col-md-9">
+          <div class="col-md-12 form-admin">
+            <h3>Información de contacto</h3>
+            <form class="contact-form">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Nombre:</label>
+                <input type="text" class="form-control" placeholder="Nombre del contacto">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Teléfono:</label>
+                <input type="text" class="form-control" placeholder="Teléfono donde podran pedir informes">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email:</label>
+                <input type="text" class="form-control" placeholder="Correo eléctronico donde podran enviar dudas">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Facebook:</label>
+                <input type="text" class="form-control" placeholder="Link de FB en caso de querer que te contacten por este medio">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Sitio web:</label>
+                <input type="text" class="form-control" placeholder="Link del sitio web">
+              </div>
+              <div>
+                <br/>
+                <button type="submit" class="btn btn-default">Cancelar</button>
+                <button type="submit" class="btn btn-primary">Siguiente</button>
+              </div>
+            </form>
           </div>
+          <!-- end form-admin -->
         </div>
         <!-- end row -->
       </div>
