--- a/home.html
+++ b/home.html
@@ -134,7 +134,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="filter-header house-content-header">
-                  <i class="fa fa-table" aria-hidden="true"></i>
+                  <i class="fa fa-th-list" aria-hidden="true"></i>
                   Resultado de la búsqueda: 1,200 propiedades
                 </div>
               </div>
