Agregue el armado del paso 3 del administrador

--- a/admin/admin2.html
+++ b/admin/admin2.html
@@ -146,7 +146,7 @@
               <!-- end estacionamiento -->
               <div>
                 <br/>
-                <a class="btn btn-default">Cancelar</a>
+                <a class="btn btn-default">Regresar</a>
                 <a class="btn btn-primary coco-color">Siguiente</a>
               </div>
             </form>
