--- a/admin/admin4.html
+++ b/admin/admin4.html
@@ -39,32 +39,20 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 form-admin">
-            <h2>Información de contacto</h2>
+            <h2>Fotos</h2>
             <form class="contact-form">
               <div class="form-group">
-                <label for="exampleInputEmail1">Nombre:</label>
-                <input type="text" class="form-control" placeholder="Nombre del contacto">
+                <label for="exampleInputFile">
+                  Agrega algunas fotos que le permitan a tus posibles huéspedes conocer la propiedad  
+                </label>
+                <input type="file" id="exampleInputFile">
               </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Teléfono:</label>
-                <input type="text" class="form-control" placeholder="Teléfono donde podran pedir informes">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email:</label>
-                <input type="text" class="form-control" placeholder="Correo eléctronico donde podran enviar dudas">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Facebook:</label>
-                <input type="text" class="form-control" placeholder="Link de FB en caso de querer que te contacten por este medio">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Sitio web:</label>
-                <input type="text" class="form-control" placeholder="Link del sitio web">
-              </div>
+              <br/>
+              <br/>
               <div>
                 <br/>
                 <a class="btn btn-default">Cancelar</a>
-                <a class="btn btn-primary coco-color">Siguiente</a>
+                <a class="btn btn-primary coco-color">Terminar</a>
               </div>
             </form>
           </div>
