--- a/test-upload.html
+++ b/test-upload.html
@@ -7,11 +7,12 @@
 		<h1>Pruebitas con los arhivos!!</h1>
 		<form id        =  "uploadForm"
 		     enctype   =  "multipart/form-data"
-		     action    =  "http://localhost:3000/api/photo"
+		     action    =  "http://localhost:3000/api/upload-files"
 		     method    =  "post"
 		>
-		<input type="file" name="userPhoto" />
-		<input type="submit" value="Upload Image" name="submit">
+			<input type="file" name="userPhoto" />
+			<input type="hidden" value="59659ecf9fbf3e320d000002" name="userId" />
+			<input type="submit" value="Upload Image" name="submit">
 		</form>
 	</body>
 </html>
